# FlashThreat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_READY.md  GITHUB_SETUP_INSTRUCTIONS.md  LICENSE  PROJECT_ANALYSIS_REMAINING.md  README.md  docker-compose.yml  env.example
backend/: Dockerfile  Dockerfile.prod  alembic.ini  create_bulk_table.py  create_tables.py  init_db.py  pyproject.toml  run_server.py  sample_iocs.csv  seed_data.py  start_server.bat
backend/alembic/: env.py
backend/alembic/versions/: add_bulk_job_table.py  initial_migration.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  ioc.py  providers.py
backend/app/core/: config.py  ioc_utils.py  performance.py
backend/app/db/: base.py
backend/app/middleware/: __init__.py  csrf.py  error_handler.py  metrics.py  rate_limit.py  security.py  validation.py
backend/app/models/: __init__.py  bulk.py  ioc.py  lookup.py  user.py
backend/app/schemas/: __init__.py  bulk.py  ioc.py  lookup.py  provider.py  user.py
backend/app/services/: aggregator.py  bulk_processor.py  cache.py  scoring.py
backend/app/services/providers/: __init__.py  abuseipdb.py  base.py  factory.py  otx.py  virustotal.py
backend/app/tests/: conftest.py  test_api.py  test_integration.py  test_ioc_utils.py  test_performance.py  test_scoring.py  test_security.py
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/pages/: ApiDataPage.jsx  (+16 more)
(+18 files in other folders)
